# dispatchula

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: get_cpm.cmake
example/: CMakeLists.txt  combined_demo.cpp  event_demo.cpp  request_demo.cpp
src/: event_dispatcher.cpp  event_dispatcher.h  event_subscriber.cpp  event_subscriber.h
src/concepts/: subscriber_concepts.h
src/event/: event_dispatcher.h  event_subscriber.h
src/request/: request.h  request_concepts.h  request_dispatcher.h  request_subscriber.h
src/shared/: dispatchula_concepts.h
test/: CMakeLists.txt  event_test.cpp  request_test.cpp
